# cadseer

./: .gitmodules  CMakeLists.txt  application.cpp  application.h  coordinatesystem.cpp  coordinatesystem.h  document.cpp  document.h  gesturehandler.cpp  gesturehandler.h  gleventwidget.cpp  gleventwidget.h  globalutilities.cpp  globalutilities.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodemaskdefs.h  readme.md  resources.qrc  selectiondefs.h  selectioneventhandler.cpp  selectioneventhandler.h  selectionintersector.cpp  selectionintersector.h  selectionmanager.cpp  selectionmanager.h  selectionmessage.cpp  selectionmessage.h  selectionstate.cpp  selectionstate.h  shapeobject.cpp  shapeobject.h  spaceballmanipulator.cpp  spaceballmanipulator.h  spaceballosgevent.cpp  spaceballosgevent.h  spaceballqevent.cpp  spaceballqevent.h  (+5 more)
annex/: base.cpp  base.h  csysdragger.cpp  csysdragger.h  instancemapper.cpp  instancemapper.h  intersectionmapper.cpp  intersectionmapper.h  seershape.cpp  seershape.h  shapeidhelper.cpp  shapeidhelper.h
application/: application.cpp  application.h  factory.cpp  factory.h  incrementwidget.cpp  incrementwidget.h  infowindow.cpp  infowindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  splitterdecorated.cpp  splitterdecorated.h
cmake/: FindLibZip.cmake  FindLibgit2.cmake  FindOpenCasCade.cmake  FindOsgQt.cmake  FindXSDCXX.cmake  FindXercesC.cmake
command/: base.cpp  base.h  blend.cpp  blend.h  checkgeometry.cpp  checkgeometry.h  command.cpp  command.h  commandconstants.h  commandmanager.cpp  commandmanager.h  constants.h  csysedit.cpp  csysedit.h  dieset.cpp  dieset.h  draggertofeature.cpp  draggertofeature.h  editcolor.cpp  editcolor.h  extract.cpp  extract.h  featurerename.cpp  featurerename.h  featurereposition.cpp  featurereposition.h  featuretodragger.cpp  featuretodragger.h  featuretosystem.cpp  featuretosystem.h  instancelinear.cpp  instancelinear.h  instancemirror.cpp  instancemirror.h  instancepolar.cpp  instancepolar.h  intersect.cpp  intersect.h  isolate.cpp  isolate.h  (+36 more)
dagview/: controlleddfs.h  dagcontrolleddfs.h  dagmodel.cpp  dagmodel.h  dagmodelgraph.cpp  dagmodelgraph.h  dagrectitem.cpp  dagrectitem.h  dagview.cpp  dagview.h  model.cpp  model.h  modelgraph.cpp  modelgraph.h  rectitem.cpp  rectitem.h  stow.cpp  stow.h  view.cpp  view.h
dialogs/: blend.cpp  blend.h  boolean.cpp  boolean.h  boxdialog.cpp  boxdialog.h  checkgeometry.cpp  checkgeometry.h  commitwidget.cpp  commitwidget.h  expressionedit.cpp  expressionedit.h  parameter.cpp  parameter.h  parameterdialog.cpp  parameterdialog.h  preferences.cpp  preferences.h  preferences.ui  project.cpp  project.h  project.ui  quote.cpp  quote.h  revision.cpp  revision.h  selectionbutton.cpp  selectionbutton.h  strip.cpp  strip.h  tagwidget.cpp  tagwidget.h  widgetgeometry.cpp  widgetgeometry.h
expressions/: abstractnode.cpp  abstractnode.h  edgeproperty.h  expressionedgeproperty.h  expressiongraph.cpp  expressiongraph.h  expressionmanager.cpp  expressionmanager.h  expressionwidget.cpp  expressionwidget.h  formulalink.h  grammer.h  graph.cpp  graph.h  manager.cpp  manager.h  stringtranslator.cpp  stringtranslator.h  stringtranslatorstow.cpp  stringtranslatorstow.h  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h  value.h  widget.cpp  widget.h
feature/: base.cpp  base.h  blend.cpp  blend.h  booleanbase.cpp  booleanbase.h  booleanidmapper.cpp  booleanidmapper.h  booleanoperation.cpp  booleanoperation.h  box.cpp  box.h  boxbuilder.cpp  boxbuilder.h  chamfer.cpp  chamfer.h  cone.cpp  cone.h  conebuilder.cpp  conebuilder.h  csysbase.cpp  csysbase.h  cylinder.cpp  cylinder.h  cylinderbuilder.cpp  cylinderbuilder.h  datumplane.cpp  datumplane.h  dieset.cpp  dieset.h  draft.cpp  draft.h  extract.cpp  extract.h  hollow.cpp  hollow.h  inert.cpp  inert.h  inputtype.h  inputtypes.h  (+66 more)
gesture/: animations.cpp  animations.h  gesturehandler.cpp  gesturehandler.h  gesturenode.cpp  gesturenode.h
libreoffice/: odshack.cpp  odshack.h
lod/: main.cpp  manager.cpp  manager.h  message.cpp  message.h
message/: dispatch.cpp  dispatch.h  message.cpp  message.h  observer.cpp  observer.h
modelviz/: base.cpp  base.h  connector.cpp  connector.h  connectorgraph.h  datumplane.cpp  datumplane.h  graph.cpp  graph.h  hiddenlineeffect.cpp  hiddenlineeffect.h  hiddenlinetechnique.cpp  hiddenlinetechnique.h  nodemaskdefs.h  shapegeometry.cpp  shapegeometry.h  shapegeometryprivate.h
osg/: circleprojector.cpp  circleprojector.h  conebuilder.h  csysdragger.h  cylinderbuilder.h  geometrylibrary.cpp  geometrylibrarytag.h  rotatecirculardragger.cpp  rotatecirculardragger.h  spherebuilder.h  torusbuilder.h
preferences/: dialog.cpp  dialog.h  dialog.ui  manager.cpp  manager.h  preferences.xml  preferencesXML.cpp  preferencesXML.h  preferencesXML.xsd
project/: featureload.cpp  featureload.h  gitmanager.cpp  gitmanager.h  message.cpp  message.h  project.cpp  project.h  projectdialog.cpp  projectdialog.h  projectdialog.ui  projectgraph.h  readme.txt  stow.cpp  stow.h
project/serial/: featurebase.xsd  featureblend.xsd  featurebox.xsd  (+36 more)
selection/: container.cpp  container.h  definitions.cpp  definitions.h  eventhandler.cpp  eventhandler.h  interpreter.cpp  interpreter.h  intersection.cpp  intersection.h  intersector.cpp  intersector.h  manager.cpp  manager.h  message.cpp  message.h  overlayhandler.cpp  overlayhandler.h  visitors.cpp  visitors.h
squash/: igl.cpp  igl.h  mesh.h  netgen.cpp  netgen.h  squash.cpp  squash.h  support.cpp  support.h  tools.cpp  tools.h
testing/: plotter.cpp  plotter.h
tools/: featuretools.cpp  featuretools.h  graphtools.h  idtools.cpp  idtools.h  infotools.cpp  infotools.h  occtools.cpp  occtools.h
viewer/: gleventwidget.cpp  gleventwidget.h  message.cpp  message.h  overlay.cpp  overlay.h  overlaycamera.cpp  overlaycamera.h  spaceballmanipulator.cpp  spaceballmanipulator.h  spaceballosgevent.cpp  spaceballosgevent.h  spaceballqevent.cpp  spaceballqevent.h  textcamera.cpp  textcamera.h  viewerwidget.cpp  viewerwidget.h  widget.cpp  widget.h
(+76 files in other folders)
